[Preetham B S] REFACTORED - The Routes
